--- a/src/WebApp/package.json
+++ b/src/WebApp/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.0.0",
+    "katex": "^0.16.22",
     "lucide-react": "^0.294.0",
     "marked": "^11.1.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.1.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
     "react-syntax-highlighter": "^15.6.6"
@@ -25,6 +27,7 @@
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-katex": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
