--- a/src/WebApp/package.json
+++ b/src/WebApp/package.json
@@ -21,7 +21,8 @@
     "react-katex": "^3.1.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
-    "react-syntax-highlighter": "^15.6.6"
+    "react-syntax-highlighter": "^15.6.6",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/prismjs": "^1.26.3",
