--- a/deploy/aigs.env
+++ b/deploy/aigs.env
@@ -1,21 +1,21 @@
-# LM Gateway Environment Configuration
-# Copy this file to /etc/lm-gateway.env and customize as needed
+# AIGS Environment Configuration
+# Copy this file to /etc/aigs.env and customize as needed
 
 # Application settings
 ASPNETCORE_ENVIRONMENT=Production
-ASPNETCORE_URLS=http://localhost:5000
+ASPNETCORE_URLS=http://0.0.0.0:5000
 
 # Database configuration
 Database__Provider=sqlite
-Database__ConnectionString=Data Source=/opt/lm-gateway/data/gateway.db
+Database__ConnectionString=Data Source=/opt/aigs/data/gateway.db
 
 # LM Studio configuration
 LmStudio__BaseUrl=http://127.0.0.1:1234
 LmStudio__RequestTimeoutSeconds=120
 
 # Security settings
-Security__JwtIssuer=lm-gateway
-Security__JwtAudience=lm-gateway-users
+Security__JwtIssuer=aigs
+Security__JwtAudience=aigs-users
 Security__JwtKey=CHANGE-THIS-TO-A-SECURE-RANDOM-KEY-IN-PRODUCTION
 Security__CookieName=access_token
 Security__CsrfHeader=X-CSRF-Token
@@ -29,8 +29,9 @@ Limits__MaxActiveStreamsPerUser=3
 Limits__MaxRequestBodyKB=128
 
 # CORS settings
-Cors__AllowedOrigins__0=https://gateway.local
-Cors__AllowedOrigins__1=https://admin.gateway.local
+Cors__AllowedOrigins__0=*
+Cors__AllowedOrigins__1=https://gateway.local
+Cors__AllowedOrigins__2=https://admin.gateway.local
 
 # Admin user (optional override)
 ADMIN_PASSWORD=your-secure-admin-password
@@ -41,6 +42,6 @@ Serilog__MinimumLevel__Override__Microsoft=Warning
 Serilog__MinimumLevel__Override__System=Warning
 
 # OpenTelemetry
-OTEL_SERVICE_NAME=lm-gateway
+OTEL_SERVICE_NAME=aigs
 OTEL_SERVICE_VERSION=1.0.0
-OTEL_RESOURCE_ATTRIBUTES=service.name=lm-gateway,service.version=1.0.0
+OTEL_RESOURCE_ATTRIBUTES=service.name=aigs,service.version=1.0.0
