--- a/src/Gateway.Api/appsettings.Development.json
+++ b/src/Gateway.Api/appsettings.Development.json
@@ -10,8 +10,8 @@
     "RequestTimeoutSeconds": 120
   },
   "Security": {
-    "JwtIssuer": "lm-gateway-dev",
-    "JwtAudience": "lm-gateway-users-dev",
+    "JwtIssuer": "aigs-dev",
+    "JwtAudience": "aigs-users-dev",
     "JwtKey": "development-jwt-key-not-for-production",
     "CookieName": "access_token",
     "CsrfHeader": "X-CSRF-Token"
