--- a/src/Gateway.Api/appsettings.Production.json
+++ b/src/Gateway.Api/appsettings.Production.json
@@ -10,8 +10,8 @@
     "RequestTimeoutSeconds": 120
   },
   "Security": {
-    "JwtIssuer": "lm-gateway",
-    "JwtAudience": "lm-gateway-users",
+    "JwtIssuer": "aigs",
+    "JwtAudience": "aigs-users",
     "JwtKey": "CHANGE-THIS-TO-A-SECURE-RANDOM-KEY-IN-PRODUCTION",
     "CookieName": "access_token",
     "CsrfHeader": "X-CSRF-Token"
@@ -26,7 +26,7 @@
   },
   "Database": {
     "Provider": "postgresql",
-    "ConnectionString": "Host=localhost;Database=lm_gateway;Username=postgres;Password=password"
+    "ConnectionString": "Host=localhost;Database=aigs;Username=postgres;Password=password"
   },
   "Cors": {
     "AllowedOrigins": [
