--- a/src/Gateway.Api/appsettings.json
+++ b/src/Gateway.Api/appsettings.json
@@ -11,8 +11,8 @@
     "RequestTimeoutSeconds": 120
   },
   "Security": {
-    "JwtIssuer": "lm-gateway",
-    "JwtAudience": "lm-gateway-users",
+    "JwtIssuer": "aigs",
+    "JwtAudience": "aigs-users",
     "JwtKey": "your-super-secret-jwt-key-change-this-in-production",
     "CookieName": "access_token",
     "CsrfHeader": "X-CSRF-Token"
