--- a/src/SimpleGateway/appsettings.json
+++ b/src/SimpleGateway/appsettings.json
@@ -11,8 +11,8 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "SecretKey": "your-super-secret-jwt-key-that-should-be-at-least-32-characters-long",
-    "Issuer": "LM-Gateway",
-    "Audience": "LM-Gateway-Users",
+    "Issuer": "AIGS",
+    "Audience": "AIGS-Users",
     "ExpirationMinutes": 60
   },
   "UserManagement": {
