--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,7 +1,7 @@
-# LM Gateway Nginx Configuration
+# AIGS Nginx Configuration
 
 # Upstream backend
-upstream lm_gateway {
+upstream aigs_backend {
     server 127.0.0.1:5000;
     # Add more servers for load balancing if needed
     # server 127.0.0.1:5001;
@@ -85,7 +85,7 @@ server {
         limit_req zone=api burst=20 nodelay;
         
         # Proxy to backend
-        proxy_pass http://lm_gateway;
+        proxy_pass http://aigs_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -119,7 +119,7 @@ server {
     location /api/auth/login {
         limit_req zone=login burst=5 nodelay;
         
-        proxy_pass http://lm_gateway;
+        proxy_pass http://aigs_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -128,7 +128,7 @@ server {
     
     # Health checks
     location /health/ {
-        proxy_pass http://lm_gateway;
+        proxy_pass http://aigs_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -144,7 +144,7 @@ server {
         auth_basic "Metrics";
         auth_basic_user_file /etc/nginx/.htpasswd;
         
-        proxy_pass http://lm_gateway;
+        proxy_pass http://aigs_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -153,7 +153,7 @@ server {
     
     # Static files (if serving frontend from nginx)
     location / {
-        root /var/www/lm-gateway;
+        root /var/www/aigs;
         index index.html;
         try_files $uri $uri/ /index.html;
         
@@ -169,7 +169,7 @@ server {
     error_page 500 502 503 504 /50x.html;
     
     location = /50x.html {
-        root /var/www/lm-gateway;
+        root /var/www/aigs;
     }
 }
 
@@ -202,7 +202,7 @@ server {
     server_tokens off;
     
     location / {
-        proxy_pass http://lm_gateway;
+        proxy_pass http://aigs_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
