--- a/src/WebApp/package.json
+++ b/src/WebApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.13",
+    "better-react-mathjax": "^2.3.0",
     "clsx": "^2.0.0",
     "katex": "^0.16.22",
     "lucide-react": "^0.294.0",
@@ -18,17 +19,17 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-katex": "^3.1.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
     "react-syntax-highlighter": "^15.6.6",
-    "remark-gfm": "^4.0.1"
+    "rehype-katex": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/react-katex": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
